Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-targeti: /
spec:
 ingressClassName: nginx
 rules:
 - http:
    paths:
    - path: /apache
      pathType: Prefix
      backend:
        service:
          name: apache-deployment
          port:
            number: 80
    - path: /custom
      pathType: Prefix
      backend:
        service:
          name: custom-deployment
          port:
            number: 80
